# agentswap

./: Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  release.yml
crates/agentswap-claude/: Cargo.toml
crates/agentswap-claude/src/: adapter.rs  lib.rs  parser.rs
crates/agentswap-claude/tests/: integration.rs
crates/agentswap-codex/: Cargo.toml
crates/agentswap-codex/src/: adapter.rs  lib.rs  parser.rs
crates/agentswap-core/: Cargo.toml
crates/agentswap-core/src/: adapter.rs  lib.rs  tool_mapping.rs  types.rs
crates/agentswap-gemini/: Cargo.toml
crates/agentswap-gemini/src/: adapter.rs  lib.rs  parser.rs
crates/agentswap-tui/: Cargo.toml
crates/agentswap-tui/src/: app.rs  main.rs  ui.rs
crates/agentswap-tui/tests/: cross_adapter_roundtrip.rs
