[workspace]
resolver = "2"
members = [
    "crates/agentswap-core",
    "crates/agentswap-claude",
    "crates/agentswap-codex",
    "crates/agentswap-gemini",
    "crates/agentswap-tui",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
