[package]
name = "agentswap-codex"
version = "0.1.0"
edition = "2021"

[dependencies]
agentswap-core = { path = "../agentswap-core" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
walkdir = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
