[package]
name = "agentswap-gemini"
version = "0.1.0"
edition = "2021"

[dependencies]
agentswap-core = { path = "../agentswap-core" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
walkdir = "2"
dirs = "5"

[dev-dependencies]
tempfile = "3"
