[package]
name = "agentswap-gemini"
version = "0.1.0"
edition = "2021"

[dependencies]
agentswap-core = { path = "../agentswap-core" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
walkdir = "2"
dirs = "5"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
