[package]
name = "agentswap"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "agentswap"
path = "src/main.rs"

[dependencies]
agentswap-core = { path = "../agentswap-core" }
agentswap-claude = { path = "../agentswap-claude" }
agentswap-codex = { path = "../agentswap-codex" }
agentswap-gemini = { path = "../agentswap-gemini" }
ratatui = "0.29"
crossterm = "0.28"
anyhow = { workspace = true }
